fix text spacing on group.html page
The spacing below department/program/title text runs into the photo when members have 2-lines of text. The increase in the height spacing of the group-member-dept in the sass should fix this.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -184,7 +184,7 @@ margin-top: 10px;
   font-size:18px;
 }
 .group-member-dept{
-  height:5%;
+  height:7%;
 }
 .group-member-subcontainer{
   height:210px;
